--- a/testdata/english/group_permission.yml
+++ b/testdata/english/group_permission.yml
@@ -1,40 +1,120 @@
 -
     gperm_groupid: '1'
-    gperm_itemid: '1'
-    gperm_modid: '42'
+    gperm_itemid: '3'
+    gperm_modid: '1828'
+    gperm_name: lexikon_approve
+-
+    gperm_groupid: '1'
+    gperm_itemid: '2'
+    gperm_modid: '1828'
     gperm_name: lexikon_approve
 -
     gperm_groupid: '1'
     gperm_itemid: '1'
-    gperm_modid: '42'
+    gperm_modid: '1828'
+    gperm_name: lexikon_approve
+-
+    gperm_groupid: '2'
+    gperm_itemid: '3'
+    gperm_modid: '1828'
+    gperm_name: lexikon_request
+-
+    gperm_groupid: '2'
+    gperm_itemid: '2'
+    gperm_modid: '1828'
+    gperm_name: lexikon_request
+-
+    gperm_groupid: '2'
+    gperm_itemid: '1'
+    gperm_modid: '1828'
+    gperm_name: lexikon_request
+-
+    gperm_groupid: '1'
+    gperm_itemid: '3'
+    gperm_modid: '1828'
+    gperm_name: lexikon_request
+-
+    gperm_groupid: '1'
+    gperm_itemid: '2'
+    gperm_modid: '1828'
+    gperm_name: lexikon_request
+-
+    gperm_groupid: '1'
+    gperm_itemid: '1'
+    gperm_modid: '1828'
+    gperm_name: lexikon_request
+-
+    gperm_groupid: '1'
+    gperm_itemid: '3'
+    gperm_modid: '1828'
+    gperm_name: lexikon_submit
+-
+    gperm_groupid: '2'
+    gperm_itemid: '3'
+    gperm_modid: '1828'
+    gperm_name: lexikon_submit
+-
+    gperm_groupid: '2'
+    gperm_itemid: '2'
+    gperm_modid: '1828'
+    gperm_name: lexikon_submit
+-
+    gperm_groupid: '2'
+    gperm_itemid: '1'
+    gperm_modid: '1828'
+    gperm_name: lexikon_submit
+-
+    gperm_groupid: '1'
+    gperm_itemid: '2'
+    gperm_modid: '1828'
+    gperm_name: lexikon_submit
+-
+    gperm_groupid: '1'
+    gperm_itemid: '1'
+    gperm_modid: '1828'
     gperm_name: lexikon_submit
 -
     gperm_groupid: '3'
+    gperm_itemid: '3'
+    gperm_modid: '1828'
+    gperm_name: lexikon_view
+-
+    gperm_groupid: '3'
+    gperm_itemid: '2'
+    gperm_modid: '1828'
+    gperm_name: lexikon_view
+-
+    gperm_groupid: '3'
     gperm_itemid: '1'
-    gperm_modid: '42'
+    gperm_modid: '1828'
+    gperm_name: lexikon_view
+-
+    gperm_groupid: '2'
+    gperm_itemid: '3'
+    gperm_modid: '1828'
+    gperm_name: lexikon_view
+-
+    gperm_groupid: '2'
+    gperm_itemid: '2'
+    gperm_modid: '1828'
     gperm_name: lexikon_view
 -
     gperm_groupid: '2'
     gperm_itemid: '1'
-    gperm_modid: '42'
+    gperm_modid: '1828'
+    gperm_name: lexikon_view
+-
+    gperm_groupid: '1'
+    gperm_itemid: '3'
+    gperm_modid: '1828'
+    gperm_name: lexikon_view
+-
+    gperm_groupid: '1'
+    gperm_itemid: '2'
+    gperm_modid: '1828'
     gperm_name: lexikon_view
 -
     gperm_groupid: '1'
     gperm_itemid: '1'
-    gperm_modid: '42'
-    gperm_name: lexikon_view
--
-    gperm_groupid: '9'
-    gperm_itemid: '1'
-    gperm_modid: '42'
-    gperm_name: lexikon_view
--
-    gperm_groupid: '8'
-    gperm_itemid: '1'
-    gperm_modid: '42'
-    gperm_name: lexikon_view
--
-    gperm_groupid: '7'
-    gperm_itemid: '1'
-    gperm_modid: '42'
+    gperm_modid: '1828'
     gperm_name: lexikon_view
